--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,16 @@
 *.dll
 *.so
 *.dylib
+rwc
 
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Testfile folder
+testfiles/*
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
